reject checkout when cart items changed
